fixed the problem with display where container became way too long and overflow was visible

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -156,7 +156,6 @@ main {
 #container {
     display: grid;
     min-height: 100vh;
-    grid-template-rows: 2fr 8fr;
 }
   
 header {
